--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_area :title %>
   </div>
   <div class="field">
-    <%= f.label :question %><br>
-    <%= f.text_field :question %>
+    <%= f.label :question_id %><br>
+    <%= f.text_field :question_id %>
   </div>
   <div class="field">
     <%= f.label :selection_count %><br>
