--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -15,10 +15,12 @@
     <%= f.label :title %><br>
     <%= f.text_area :title %>
   </div>
-  <div class="field">
-    <%= f.label :quiz_id %><br>
-    <%= f.text_field :quiz_id %>
-  </div>
+  <select name="question[quiz_id]">
+    <% @quizzes.each do |quiz|%>
+      <option value="<%= quiz.id %>"><%= quiz.title %></option>
+    <% end %>
+  </select>
+
   <div class="field">
     <%= f.label :view_count %><br>
     <%= f.number_field :view_count %>
