--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -12,17 +12,19 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :description %><br>
     <%= f.text_area :title %>
   </div>
+  <select name="option[question_id]">
+    <% @questions.each do |question|%>
+      <option value="<%= question.id %>"><%= question.title %></option>
+    <% end %>
+  </select>
+  <br>
   <div class="field">
-    <%= f.label :question_id %><br>
-    <%= f.text_field :question_id %>
+    <%= f.file_field :content %>
   </div>
-  <div class="field">
-    <%= f.label :selection_count %><br>
-    <%= f.number_field :selection_count %>
-  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
