--- a/app/views/options/index.html.erb
+++ b/app/views/options/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Question</th>
+      <th>Content</th>
       <th>Selection count</th>
       <th colspan="3"></th>
     </tr>
@@ -14,7 +15,10 @@
     <% @options.each do |option| %>
       <tr>
         <td><%= option.title %></td>
-        <td><%= option.question %></td>
+        <td><%= option.question.title %></td>
+        <td>
+          <%= image_tag option.content.url(:thumb) %>
+        </td> 
         <td><%= option.selection_count %></td>
         <td><%= link_to 'Show', option %></td>
         <td><%= link_to 'Edit', edit_option_path(option) %></td>
