--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,14 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @quiz.title %>
-</p>
-
-<p>
-  <strong>View count:</strong>
-  <%= @quiz.view_count %>
-</p>
-
+<% if @questions.present? %>	
+	<% @questions.each do |question| %>
+		<div class = "question-container">
+			<div class = "question-title">
+				<%= question.title %>
+			</div>
+				<% if question.options.present? %>
+					<% question.options.each do |option| %>
+						<% if option.content.present? %>
+							<div class = "option-content-container">
+								<%= image_tag option.content.url(:medium) %>
+							</div>
+						<% end %>
+					<% end %>
+				<% end %>
+			</div>
+		</div>
+	<% end %>
+<% end %>
 <%= link_to 'Edit', edit_quiz_path(@quiz) %> |
 <%= link_to 'Back', quizzes_path %>
