--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -11,6 +11,26 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_area :title %>
+  </div>
+
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </div>
+  <select name="result[quiz_id]">
+    <% @quizzes.each do |quiz|%>
+      <option value="<%= quiz.id %>"><%= quiz.title %></option>
+    <% end %>
+  </select>
+  <br>
+  
+  <div class="field">
+    <%= f.file_field :image %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
