--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -3,6 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
+      <th>Title</th>
+      <th>Quiz<th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,6 +13,17 @@
   <tbody>
     <% @results.each do |result| %>
       <tr>
+        <td>
+          <% if result.image.present? %>
+            <%= image_tag result.image.url(:thumb) %>
+          <% end %>
+        </td>
+        <td><%= result.title %></td>
+        <td>
+          <% if result.quiz.present? %>
+            <%= result.quiz.title %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', result %></td>
         <td><%= link_to 'Edit', edit_result_path(result) %></td>
         <td><%= link_to 'Destroy', result, method: :delete, data: { confirm: 'Are you sure?' } %></td>
