--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -1,4 +1,31 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+	<% if @result.image.present? %>
+		<%= image_tag @result.image.url(:thumb) %>
+	<% end %>
+</p>
+<p>
+  <strong>Title:</strong>
+  <%= @result.title %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @result.description %>
+</p>
+
+<p>
+  <strong>Quiz:</strong>
+  <% if @result.quiz.present? %>
+  	<%= @result.quiz.title %>
+  <% end %>
+</p>
+
+<p>
+  <strong>View count:</strong>
+  <%= @result.viewings %>
+</p>
+
 <%= link_to 'Edit', edit_result_path(@result) %> |
 <%= link_to 'Back', results_path %>
