--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -19,5 +19,22 @@
 		</div>
 	<% end %>
 <% end %>
+
+Result:
+<% if @results.present? %>
+	<% @results.each do |result| %>
+		<div class = "result-container">
+			<div class = "result-image">
+				<%= image_tag result.image.url(:medium) %>
+			</div>
+			<div class = "result-title">
+				<%= result.title %>
+			</div>
+			<div class = "result-description">
+				<%= result.description %>
+			</div>
+		</div>
+	<% end %>
+<% end %>
 <%= link_to 'Edit', edit_quiz_path(@quiz) %> |
 <%= link_to 'Back', quizzes_path %>
