--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -15,10 +15,21 @@
     <%= f.label :title %><br>
     <%= f.text_area :title %>
   </div>
+
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </div>
+
   <div class="field">
     <%= f.label :view_count %><br>
     <%= f.number_field :view_count %>
   </div>
+
+  <div class="field">
+    <%= f.file_field :image %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
