--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Title</th>
       <th>View count</th>
       <th colspan="3"></th>
@@ -12,6 +13,11 @@
   <tbody>
     <% @quizzes.each do |quiz| %>
       <tr>
+        <td>
+          <% if quiz.image.present? %>
+            <%= image_tag quiz.image.url(:thumb) %>
+          <% end %>
+        </td>
         <td><%= quiz.title %></td>
         <td><%= quiz.view_count %></td>
         <td><%= link_to 'Show', quiz %></td>
