--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -16,7 +16,10 @@
     <%= f.text_area :title %>
   </div>
 
-
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </div>
 
   <div class="field">
     <%= f.label :view_count %><br>
