--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -1,3 +1,122 @@
 // Place all the styles related to the Quizzes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import "bootstrap";
+
+body{
+
+}
+.site-content-container{
+	@extend .container;
+}
+.site-header-container {
+	@extend .container-fluid;
+}
+.site-header{
+	@extend .row;
+	padding: 5px;
+}
+.site-title-container{
+	@extend .col-md-3;
+	
+}
+.site-title{
+	
+}
+.greeting{
+	@extend .col-md-3;
+	@extend .col-md-offset-6;
+}
+.named-greeting{
+	
+}
+#name{
+	
+}
+.main-list-quiz-container{
+	@extend .container-fluid;
+}
+.listed-quiz-container{
+	@extend .row;
+}
+.listed-quiz-text{
+	@extend .col-md-6;
+	height:195px;
+}
+.listed-quiz-title{	
+	font-size: 25px;
+}
+.listed-quiz-image{
+	@extend .col-md-3;
+}
+.listed-quiz-description{
+	
+}
+.centering-table{
+  display: table; 
+  height: 100%;
+  width:100%; 
+  overflow: hidden;
+  padding-bottom:10px;
+}
+.centering-table-cell{
+  display: table-cell; 
+  vertical-align: middle;
+  padding:5px;
+}
+.quiz-container{
+	text-align:center;
+}
+.quiz-title-container{
+	text-align:center;
+	font-size: 30px;
+	margin: 20px;
+}
+.question-list-container{
+	@extend .container;
+}
+.question-container{
+	@extend .container-fluid;
+	margin: 15px;
+}
+.question-title{
+	@extend .row;
+	text-align:center;
+	font-size: 18px;
+}
+.option-list-container{
+	@extend .row;
+}
+.option-container{
+	@extend .col-md-4;
+}
+.result-container{
+	@extend .container-fluid;
+	width:40%;
+	text-align:center;
+	margin-top:20px;
+}
+.result-row{
+	@extend .row;
+}
+.result-image{
+	@extend .col-md-3;
+}
+.result-title{
+	@extend .col-md-12;
+	font-size: 25px;	
+	margin-bottom: 5px;
+}
+.result-description{
+	@extend .col-md-9;
+	height: 240px;
+}
+.back-button{
+	@extend .btn;
+	@extend .btn-default;
+}
+.back-button-container{
+	text-align:center;
+	margin: 20px;
+}
