--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -13,8 +13,9 @@
 
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :title %>
+    <%= f.text_area :title, :cols => "10", :rows => "1" %>
   </div>
+
   <select name="option[question_id]">
     <% @questions.each do |question|%>
       <option value="<%= question.id %>"><%= question.title %></option>
