--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_area :title %>
+    <%= f.text_area :title, :cols => "60", :rows => "1" %>
   </div>
   <select name="question[quiz_id]">
     <% @quizzes.each do |quiz|%>
