--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Image</th>
       <th>Title</th>
+      <th>Result Prefix</th>
       <th>View count</th>
       <th colspan="3"></th>
     </tr>
@@ -19,6 +20,7 @@
           <% end %>
         </td>
         <td><%= quiz.title %></td>
+        <td><%= quiz.result_prefix %></th>
         <td><%= quiz.view_count %></td>
         <td><%= link_to 'Show', quiz %></td>
         <td><%= link_to 'Edit', edit_quiz_path(quiz) %></td>
