--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <select name="question[quiz_id]">
     <% @quizzes.each do |quiz|%>
-      <option value="<%= quiz.id %>"><%= quiz.title %></option>
+      <option value="<%= quiz.id %>" <%= "selected" if quiz.id == @question.quiz_id %>><%= quiz.title %></option>
     <% end %>
   </select>
 
