--- a/app/views/options/index.html.erb
+++ b/app/views/options/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Listing options</h1>
+ 
+<%= link_to 'New Option', new_option_path, class: "create-new-instance-button" %>
+ 
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
@@ -42,4 +45,4 @@
 
 <br>
 
-<%= link_to 'New Option', new_option_path %>
+
