--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Listing quizzes</h1>
 
-<table>
+<%= link_to 'New Quiz', new_quiz_path, class: "create-new-instance-button" %>
+
+<table class="table">
   <thead>
     <tr>
       <th>Image</th>
@@ -32,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Quiz', new_quiz_path %>
+
