--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Listing results</h1>
 
-<table>
+<%= link_to 'New Result', new_result_path, class: "create-new-instance-button" %>
+
+
+<table class="table">
   <thead>
     <tr>
       <th>Image</th>
@@ -34,4 +37,4 @@
 
 <br>
 
-<%= link_to 'New Result', new_result_path %>
+
