--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -8,6 +8,7 @@
     <tr>
       <th>Image</th>
       <th>Title</th>
+      <th>Description</th>
       <th>Quiz<th>
       <th colspan="3"></th>
     </tr>
@@ -22,6 +23,7 @@
           <% end %>
         </td>
         <td><%= result.title %></td>
+        <td><%= result.description %></td>
         <td>
           <% if result.quiz.present? %>
             <%= result.quiz.title %>
