images size set

--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -91,6 +91,9 @@ body{
 .option-container{
 	@extend .col-md-4;
 }
+.option-image{
+	
+}
 #result-container{
 	@extend .container-fluid;
 	width:40%;
