--- a/app/views/quizzes/list.html.erb
+++ b/app/views/quizzes/list.html.erb
@@ -3,7 +3,7 @@
 		<a href = "/quizzes/<%= quiz.id %>">
 			<div class = "listed-quiz-container">
 				<div class = "listed-quiz-image">
-					<%= image_tag quiz.image.url(:medium) , size: "260x195" %>
+					<%= image_tag quiz.image.url(:medium) %>
 				</div>
 				<div class = "listed-quiz-text" >
 					<div class="centering-table">
