--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -17,7 +17,7 @@
 								<% question.options.each do |option| %>
 									<% if option.content.present? %>
 										<div class = "option-container">
-											<%= image_tag option.content.url(:medium), size: "150x200", alt: option.title %>
+											<%= image_tag option.content.url(:medium), alt: option.title, class: "option-image" %>
 											<input type="radio" name="option_selected[<%= question.id %>]" value="<%= option.id %>">
 										</div>
 									<% end %>
@@ -41,7 +41,7 @@
 		</div>
 		<div class = "result-row">
 			<div id = "result-image-container">
-				<image id = "result-image" height="240" width="180">
+				<image id = "result-image" >
 			</div>					
 			<div id = "result-description-container">
 				<div class="centering-table">
