--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,11 @@
 <head>
   <title>QFash</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class = "site-body">
 	<div class = "site-header-container">
 		<div class = "site-header">
 			<div class = "site-title-container">
@@ -14,7 +15,7 @@
 			</div>
 			<div class = "greeting">
 				<div class = "named-greeting">
-					Hi, <div id = "name"></div> <% if user_signed_in? %><%= link_to "Sign Out", destroy_user_session_path, method: :delete %><% end %>
+					<div id = "name"></div> <% if user_signed_in? %><%= link_to "Sign Out", destroy_user_session_path, method: :delete %><% end %>
 				</div>
 			</div>
 			
