--- a/app/views/quizzes/list.html.erb
+++ b/app/views/quizzes/list.html.erb
@@ -1,23 +1,16 @@
 <div class="main-quiz-list-container">
 	<% @quizzes.each do |quiz|%>
 		<a href = "/quizzes/<%= quiz.id %>">
-			<div class = "listed-quiz-container">
+			<div class="listed-quiz-container">
 				<div class = "listed-quiz-image">
 					<%= image_tag quiz.image.url(:medium) %>
 				</div>
-				<div class = "listed-quiz-text" >
-					<div class="centering-table">
-	   					<div class="centering-table-cell">   	
-		   					<div class = "listed-quiz-title">
-								<%= quiz.title %>
-							</div>
-							<div class = "listed-quiz-description">
-								<%= quiz.description %>
-							</div>					
-	    	  			</div>
-	  				</div>				
-				</div>
+				<div class = "listed-quiz-text">
+					<h2 class = "listed-quiz-title"><%= quiz.title %></h2>
+					<p><%= quiz.description %></p>
+				</div>			
 			</div>
+
 		</a>
 	<% end %>
 </div>
