--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -39,23 +39,24 @@
 			</div>
 		<% end %>
 	<% end %>
-
-	<div id = "result-container">
-		<div class = "result-row">
-			<div id = "result-title-container">
-				<div id = "result-title"></div>
+	<div id = "result-placeholder">
+		<div id = "result-container">
+			<div class = "result-row">
+				<div id = "result-title-container">
+					<div id = "result-title"></div>
+				</div>
 			</div>
-		</div>
-		<div class = "result-row">
-			<div id = "result-image-container">
-				<image id = "result-image" >
-			</div>					
-			<div id = "result-description-container">
-				<div class="centering-table">
-   					<div class="centering-table-cell">  	
-   						<div id="result-description"></div>			   							
-    	  			</div>
-  				</div>	
+			<div class = "result-row">
+				<div id = "result-image-container">
+					<image id = "result-image" >
+				</div>					
+				<div id = "result-description-container">
+					<div class="centering-table">
+	   					<div class="centering-table-cell">  	
+	   						<div id="result-description"></div>			   							
+	    	  			</div>
+	  				</div>	
+				</div>
 			</div>
 		</div>
 	</div>
