--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -34,8 +34,13 @@
 					</div>
 				<% end %>
 			</div>
-			<div class="quiz-submit-button-container">
-				<input class="quiz-submit-button" name="commit" type="submit" value="Submit" />
+			<div id = "quiz-end-container">
+				<div class="quiz-submit-button-container">
+					<input id="quiz-submit-button" name="commit" type="submit" value="Submit"/>
+				</div>
+				<div class="progress">
+					<div class="progress-bar" data-transitiongoal="0" aria-valuemin="0" aria-valuemax="100"></div>
+				</div>
 			</div>
 		<% end %>
 	<% end %>
