--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 		<div class = "site-header">
 			<div class = "site-title-container">
 				<div class = "site-title">QFash</div>
+				<a href = "/">
+					<div class = "site-link"></div>
+				</a>
 			</div>
 			<div class = "greeting">
 				<div class = "named-greeting">
