--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -157,6 +157,7 @@ body{
 .question-container{
 	@extend .container-fluid;
 	margin: 15px;
+	padding-top: 13px;
 }
 .question-title{
 	@extend .row;
@@ -251,7 +252,11 @@ body{
 	*/
 }
 .option-selector-radio{
-	display:none;
+	position:absolute;
+	width: 1px;
+	height:1px;
+	top: 1px;
+	visibility: hidden;
 
 }
 #result-placeholder{
@@ -293,6 +298,8 @@ body{
 	@extend .btn-default;
 	border-radius: 0px;
 	border-color: transparent;
+	padding-top:7px;
+	padding-bottom:7px;
 }
 #quiz-end-container{
 	width: 50%;
