--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -22,7 +22,7 @@
 													<div class = "option-selected-bar-holder"></div>
 													<%= image_tag option.content.url(:medium), alt: option.title, class: "option-image" %>
 													<div class = "curtain"></div>
-													<input type="radio" name="option_selected[<%= question.id %>]" value="<%= option.id %>" class = "option-selector-radio required">
+													<input type="radio" name="option_selected[<%= question.id %>]" value="<%= option.id %>" class = "option-selector-radio">
 													<div class = "option-selected-bar"></div>										
 												</div>
 											</div>
